Fix width of title on mobile screens

--- a/src/css/Section-styles/Contacts-section.css
+++ b/src/css/Section-styles/Contacts-section.css
@@ -13,6 +13,7 @@
   font-weight: 400;
   line-height: 1.2;
   letter-spacing: -0.01em;
+  width: 335px;
   margin-bottom: 24px;
 }
 
@@ -151,6 +152,9 @@
 }
 
 @media only screen and (min-width: 767.98px) {
+  .contacts-title {
+    width: 100%;
+  }
   .contacts-address-list {
     flex-direction: row;
     gap: 25px;
